k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tuto
  labels:
    name: tuto
    app: linux-network-map
